Remove scala from rxjava-examples
Groovy and Scala can't co-exist in a single Eclipse project even though Gradle handles it fine.

Perhaps the examples should go in the /test/ folder of each of the rxjava-[language] projects instead of rxjava-examples?